# DISANA

./: CMakeLists.txt  README.md  README_zh.md
DreamAN/Correction/: MomentumCorrection.cxx  MomentumCorrection.h
DreamAN/Cuts/: ElectronCut.h  EventCut.cxx  EventCut.h  QADBCut.cxx  QADBCut.h  QADBCuts.cxx  QADBCuts.h  TrackCut.cxx  TrackCut.h
DreamAN/DrawHist/: DISANAMMUtils.h  DISANAMath.h  DISANAMathFitUtils.h  DISANA_PhiDiffrad.h  DISANA_PhiMassUtils copy.h  DISANA_PhiMassUtils.h  DISANAcomparer.h  DISANAplotter.h  DrawAndSave.cxx  DrawAndSave.h  DrawStyle.h
DreamAN/Math/: ParticleMassTable.cxx  RECParticleKinematic.cxx  RECParticleKinematic.h  luminosity.h
DreamAN/ParticleInformation/: RECCalorimeter.cxx  RECCalorimeter.h  RECForwardTagger.cxx  RECForwardTagger.h  RECParticle.cxx  RECParticle.h  RECTraj.cxx  RECTraj.h
DreamAN/core/: AnalysisTask.cxx  AnalysisTask.h  AnalysisTaskManager.cxx  AnalysisTaskManager.h  Columns.cxx  Columns.h  DVCSAnalysis.cxx  DVCSAnalysis.h  EventProcessor.cxx  EventProcessor.h  Events.cxx  Events.h  FilesInPath.cxx  HipoToRootConverter.cxx  HipoToRootConverter.h  PerRunCounter.h  PhiAnalysis.cxx  PhiAnalysis.h
macros/: Run101.C  Run102DCfiducialcut.C  Run102DCfiducialcut_2.C  Run102fiducialcut.C  Run103ECALfiducialcut.C  RunDVCSAnalysis.C  RunDVCSAnalysisOld.C  RunPhiAnalysis.C  countEvents.c  main.C  main101.C  main102DCfiducialcut.C  main102fiducialcut.C  main103ECALfiducialcut.C  mainDVCS.C  mainDVCS2.C  mainPhi.C  run_RGA_phi_analysis.csh  run_RGA_phi_analysis.sh  run_RGA_phi_analysis_final.zsh  run_disana_parallel.zsh  testRDF.C
python/: Hatta_strikeman_fit.py  file_num_comparer.py  fit_gloun_radius.py  plot_phi_dsdt_from_csv.py  plot_phi_rlt_from_csv.py  plot_radcorr.py
rootmacros/: ChargeSummary_RGA.zsh  DISANA_PhiAnalysisPlotter.cpp  DISANA_Xplotter.cpp  DISANA_Xplotter2.cpp  DISANA_Xplotter2csv.cpp  DISANA_Xplotter2csv6p5.cpp  DISANA_Xplotter2csv8p5.cpp  DISANA_XplotterOut.cpp  DISANA_Xplotter_RGA.cpp  DrawProfiles.c  DrawStatBoostEffectsForGEMC.C  PlotCutsRatioWidth.C  PlotGenCuts.C  PlotRecCuts.C  SplitRDF.cpp  analysisCVTFid.cpp  analysisDCFid.cpp  analysisECALFid.cpp  analysisECALSF.cpp  analysisFTFid.cpp  analysisMomentumCorrection.cpp  analysisPhiMass.cpp  analysisPi0Mass.cpp  charge.py  chargeSumRuns.groovy  chargeSumRuns_2.groovy  charge_sp18_outb.txt  charge_sp19.txt  charge_summary_RGA.txt  charge_summary_RGA_old.txt  dvcs_cuts_gen.csv  dvcs_cuts_gen_6p5.csv  dvcs_cuts_gen_bin.csv  dvcs_cuts_nan.csv  dvcs_cuts_rec.csv  dvcs_cuts_rec_6p5.csv  dvcs_cuts_rec_bin.csv  dvcs_kin.c  lund2rdf.cpp  lund2rdf2.cpp  (+5 more)
scripts/: run_RGA_phi_analysis.zsh  run_analysisdvcs_parallel.sh  run_disana_parallel.zsh  run_hipo2root.zsh
source/Cuts/: ElectronCut.cxx  EventCut.cxx  EventCut.h  TrackCut.cxx  TrackCut.h
source/DrawHist/: DrawAndSave.cxx  DrawAndSave.h
source/Math/: ParticleMassTable.h  RECParticleKinematic.cxx  RECParticleKinematic.h
source/ParticleInformation/: RECParticle.cxx  RECParticle.h  RECTrack.cxx  RECTrack.h  RECTraj.cxx  RECTraj.h
source/core/: AnalysisTask.h  DVCSAnalysis.cxx  EventProcessor.h  Events.cxx  Events.h  FilesInPath.cxx  FilesInPath.h
